extra/mariabackup/xtrabackup.cc
@@ -244,6 +244,9 @@ long innobase_file_io_threads = 4;
 ulong innobase_read_io_threads = 4;
 ulong innobase_write_io_threads = 4;
 
+/* Store the failed read of undo tablespace ids */
+std::set<space_id_t> fail_undo_ids;
+
 longlong innobase_page_size = (1LL << 14); /* 16KB */
 char*	innobase_buffer_pool_filename = NULL;
 
@@ -409,6 +412,9 @@ static ddl_tracker_t ddl_tracker;
 used to indicate whether the given deferred tablespace can
 be reconstructed. */
 static std::set<space_id_t> first_page_init_ids;
+
+/** Store the space ids of truncated undo log tablespaces */
+static std::set<space_id_t> undo_trunc_ids;
 
 // Convert non-null terminated filename to space name
 static std::string filename_to_spacename(const void *filename, size_t len);
@@ -924,6 +930,11 @@ static void backup_file_op_fail(ulint space_id, int type,
 static void backup_first_page_op(ulint space_id)
 {
   first_page_init_ids.insert(space_id);
+}
+
+static void backup_undo_trunc(ulint space_id)
+{
+  undo_trunc_ids.insert(space_id);
 }
 
 /*
@@ -2851,10 +2862,20 @@ static my_bool xtrabackup_copy_datafile(fil_node_t *node, uint thread_n,
 	}
 
 	/* The main copy loop */
-	while ((res = xb_fil_cur_read(&cursor, corrupted_pages)) ==
-		XB_FIL_CUR_SUCCESS) {
+	while (1) {
+		res = xb_fil_cur_read(&cursor, corrupted_pages);
+		if (res == XB_FIL_CUR_ERROR || res == XB_FIL_CUR_EOF) {
+			break;
+		}
+
 		if (!write_filter.process(&write_filt_ctxt, dstfile)) {
 			goto error;
+		}
+
+		if (res == XB_FIL_CUR_SKIP) {
+			fprintf(stderr, "add fail undo ids\n");
+			fail_undo_ids.insert(cursor.space_id);
+			break;
 		}
 	}
 
@@ -4449,6 +4470,16 @@ static bool xtrabackup_backup_low()
 
 	dst_log_file = NULL;
 
+	for (auto it = fail_undo_ids.begin(); it != fail_undo_ids.end();
+	     it++) {
+		if (undo_trunc_ids.find(*it) == undo_trunc_ids.end()) {
+			msg("mariabackup: Failed to read undo log "
+			    "tablespace and there is no undo "
+			    "tablespace truncation redo record.");
+			return false;
+		}
+	}
+
 	if(!xtrabackup_incremental) {
 		strcpy(metadata_type, "full-backuped");
 		metadata_from_lsn = 0;
@@ -4524,6 +4555,7 @@ static bool xtrabackup_backup_func()
 	srv_operation = SRV_OPERATION_BACKUP;
 	log_file_op = backup_file_op;
 	first_page_init = backup_first_page_op;
+	undo_space_trunc = backup_undo_trunc;
 	metadata_to_lsn = 0;
 
 	/* initialize components */
@@ -4539,6 +4571,7 @@ fail:
 
 		log_file_op = NULL;
 		first_page_init = NULL;
+		undo_space_trunc = NULL;
 		if (dst_log_file) {
 			ds_close(dst_log_file);
 			dst_log_file = NULL;
@@ -4828,6 +4861,7 @@ fail_before_log_copying_thread_start:
 	innodb_shutdown();
 	log_file_op = NULL;
 	first_page_init = NULL;
+	undo_space_trunc = NULL;
 	pthread_mutex_destroy(&backup_mutex);
 	pthread_cond_destroy(&scanned_lsn_cond);
 	if (!corrupted_pages.empty()) {
